--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
 
     <uses-permission android:name="android.permission.SEND_SMS" />
 
@@ -33,6 +34,7 @@
         <service android:name=".service.NetworkService"
             android:enabled="true"
             android:exported="true"
+            android:foregroundServiceType="remoteMessaging"
             android:permission="android.permission.BROADCAST_SMS" >
 
             <intent-filter>
