now broadcast receiver and service update activity in real time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             </intent-filter>
         </service>
 
+<!--        <receiver android:name=".receiver.NetworkChangeReceiver">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="W"-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
+
     </application>
 
 </manifest>
